--- a/Firmware/.vscode/settings.json
+++ b/Firmware/.vscode/settings.json
@@ -17,5 +17,10 @@
         }
     },
     "cmake.buildBeforeRun": true,
-    "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
+    "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
+    "files.associations": {
+        "dreq.h": "c",
+        "pio.h": "c",
+        "multiplex_lcd.pio.h": "c"
+    }
 }
