--- a/Firmware/.vscode/launch.json
+++ b/Firmware/.vscode/launch.json
@@ -14,6 +14,7 @@
             "configFiles": [
                 // This may need to be "interface/picoprobe.cfg" for some previous builds
                 "interface/cmsis-dap.cfg",
+                //"interface/picoprobe.cfg",
                 "target/rp2040.cfg"
             ],
             "svdFile": "${env:PICO_SDK_PATH}/src/rp2040/hardware_regs/rp2040.svd",
@@ -22,7 +23,8 @@
             "postRestartCommands": [
                 "break main",
                 "continue"
-            ]
+            ],
+            "showDevDebugOutput": "raw"
         }
     ]
 }
