Updated README, added speed to launch command

--- a/Firmware/.vscode/launch.json
+++ b/Firmware/.vscode/launch.json
@@ -24,6 +24,9 @@
                 "break main",
                 "continue"
             ],
+            "openOCDLaunchCommands": [
+                "adapter speed 5000"
+            ],
             "showDevDebugOutput": "raw"
         }
     ]
