--- a/Firmware/CMakeLists.txt
+++ b/Firmware/CMakeLists.txt
@@ -30,6 +30,7 @@ add_executable(${PROJECT_NAME}
     src/multiplex_lcd_drv.cpp
     src/RTClib.cpp
     src/RTC_DS3231.cpp
+    src/usb_serial.cpp
 )
 
 pico_generate_pio_header(${PROJECT_NAME} ${CMAKE_CURRENT_LIST_DIR}/src/multiplex_lcd.pio OUTPUT_DIR ${CMAKE_CURRENT_LIST_DIR}/generated)
@@ -44,5 +45,5 @@ pico_add_extra_outputs(${PROJECT_NAME})
 #example_auto_set_url(${PROJECT_NAME})
 
 # Enable usb output, disable uart output TODO
-#pico_enable_stdio_usb(${PROJECT_NAME} 1)
-#pico_enable_stdio_uart(${PROJECT_NAME} 0)
+pico_enable_stdio_usb(${PROJECT_NAME} 1)
+pico_enable_stdio_uart(${PROJECT_NAME} 0)
