--- a/Firmware/CMakeLists.txt
+++ b/Firmware/CMakeLists.txt
@@ -1,29 +1,41 @@
-cmake_minimum_required(VERSION 3.22)
+# Generated Cmake Pico project file
 
-# Pull in SDK (must be before project)
-include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
-#include(pico_extras_import_optional.cmake)
+cmake_minimum_required(VERSION 3.13)
 
-project(diy_watch)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-if (PICO_SDK_VERSION_STRING VERSION_LESS "1.3.0")
-    message(FATAL_ERROR "Raspberry Pi Pico SDK version 1.3.0 (or later) required. Your version is ${PICO_SDK_VERSION_STRING}")
+# Initialise pico_sdk from installed location
+# (note this can come from environment, CMake cache etc)
+
+# == DO NOT EDIT THE FOLLOWING LINES for the Raspberry Pi Pico VS Code Extension to work ==
+if(WIN32)
+    set(USERHOME $ENV{USERPROFILE})
+else()
+    set(USERHOME $ENV{HOME})
 endif()
+set(sdkVersion 2.1.1)
+set(toolchainVersion 14_2_Rel1)
+set(picotoolVersion 2.1.1)
+set(picoVscode ${USERHOME}/.pico-sdk/cmake/pico-vscode.cmake)
+if (EXISTS ${picoVscode})
+    include(${picoVscode})
+endif()
+# ====================================================================================
+set(PICO_BOARD pico CACHE STRING "Board type")
 
-# Initialize the SDK
+# Pull in Raspberry Pi Pico SDK (must be before project)
+include(pico_sdk_import.cmake)
+
+project(diy_watch C CXX ASM)
+
+# Initialise the Raspberry Pi Pico SDK
 pico_sdk_init()
 
-add_compile_options(-Wall
-        -Wno-format          # int != int32_t as far as the compiler is concerned because gcc has int32_t as long int
-        -Wno-unused-function # we have some for the docs that aren't called
-        )
-if (CMAKE_C_COMPILER_ID STREQUAL "GNU")
-    add_compile_options(-Wno-maybe-uninitialized)
-endif()
-
 include_directories(include)
+
+# Add executable. Default name is the project name, version 0.1
 
 add_executable(${PROJECT_NAME}
     src/diy_watch.cpp
@@ -33,17 +45,31 @@ add_executable(${PROJECT_NAME}
     src/usb_serial.cpp
 )
 
+pico_set_program_name(diy_watch "diy_watch")
+pico_set_program_version(diy_watch "0.1")
+
+# Generate PIO header
+#pico_generate_pio_header(diy_watch ${CMAKE_CURRENT_LIST_DIR}/blink.pio)
 pico_generate_pio_header(${PROJECT_NAME} ${CMAKE_CURRENT_LIST_DIR}/src/multiplex_lcd.pio OUTPUT_DIR ${CMAKE_CURRENT_LIST_DIR}/generated)
 
-# pull in common dependencies
-target_link_libraries(${PROJECT_NAME} pico_stdlib hardware_pio hardware_i2c)
+# Modify the below lines to enable/disable output over UART/USB
+pico_enable_stdio_uart(diy_watch 0)
+pico_enable_stdio_usb(diy_watch 1)
 
-# create map/bin/hex file etc.
-pico_add_extra_outputs(${PROJECT_NAME})
+# Add the standard library to the build
+target_link_libraries(diy_watch
+        pico_stdlib)
 
-# add url via pico_set_program_url
-#example_auto_set_url(${PROJECT_NAME})
+# Add the standard include files to the build
+target_include_directories(diy_watch PRIVATE
+        ${CMAKE_CURRENT_LIST_DIR}
+)
 
-# Enable usb output, disable uart output TODO
-pico_enable_stdio_usb(${PROJECT_NAME} 1)
-pico_enable_stdio_uart(${PROJECT_NAME} 0)
+# Add any user requested libraries
+target_link_libraries(diy_watch 
+        hardware_i2c
+        hardware_pio
+        )
+
+pico_add_extra_outputs(diy_watch)
+
